--- a/isa.css
+++ b/isa.css
@@ -11,6 +11,24 @@
      transition: .3s ease-in;
      
   }
+  .qr{
+   text-align: center;
+   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   color: #0c3ee2;
+   font-size: 30px;
+  }
+  .collab{
+   width: 200px;
+   height: auto;
+  }
+  .collabs{
+   display: flex;
+  }
+  .colabsss{
+   margin-left: 510px;
+   width: 100px;
+   height: auto;
+  }
   .product-item:hover {
      border-bottom: 2px solid #4b70e7;
   }
