--- a/isa.css
+++ b/isa.css
@@ -15,10 +15,10 @@
    text-align: center;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: #0c3ee2;
-   font-size: 30px;
+   font-size: 40px;
   }
   .collab{
-   width: 200px;
+   width: 230px;
    height: auto;
   }
   .collabs{
@@ -28,6 +28,15 @@
    margin-left: 510px;
    width: 100px;
    height: auto;
+  }
+  .sdustore{
+   text-align: center;
+   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   color:crimson;
+   font-size: 40px;
+  }
+  .sdustore span{
+   color: #021964;
   }
   .product-item:hover {
      border-bottom: 2px solid #4b70e7;
@@ -306,3 +315,37 @@
   #confirm_emails{
  font-size: 0.9516837481698389vw;
   }
+
+  .dropdown {
+   position: relative;
+   display: inline-block;
+   cursor: pointer;
+ }
+ 
+ /* Dropdown Content (Hidden by Default) */
+ .dropdown-content {
+   display: none;
+   position: absolute;
+   background-color: #f9f9f9c5;
+   min-width: 80px;
+   max-height: 180px;
+   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   z-index: 1;
+ }
+ 
+ /* Links inside the dropdown */
+ .dropdown-content a {
+   color: black;
+   padding: 12px 16px;
+   text-decoration: none;
+   display: block;
+   font-size: 12px;
+ }
+ 
+ /* Change color of dropdown links on hover */
+ .dropdown-content a:hover {background-color: #f1f1f1b4}
+ 
+ /* Show the dropdown menu on hover */
+ .dropdown:hover .dropdown-content {
+   display: block;
+ }
