--- a/red_coffee.css
+++ b/red_coffee.css
@@ -235,10 +235,7 @@ h1,h2,h3,h4,h5,h6{
     
     text-align:center;
  }
-.product-img{
-    width: 23vw;
-    height: 20vw;
-}
+
 
 
  .product-item {
@@ -247,6 +244,7 @@ h1,h2,h3,h4,h5,h6{
     margin: 0 auto;
     border-bottom: 2px solid #F5F5F5;
     background:lavenderblush;
+    
     font-family: "Open Sans";
     transition: .3s ease-in;
     
@@ -434,4 +432,9 @@ font-size: 0.9516837481698389vw;
  }
  #confirm_emails{
 font-size: 0.9516837481698389vw;
+ }
+ @media screen and(max-width:500px){
+    .cart-wrapper{
+        display: flexbox;
+    }
  }
