--- a/belkafood.css
+++ b/belkafood.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Montserrat', sans-serif;
     background-image: url(img/belka.JPG);
+    overflow-x: hidden;
     background-repeat: no-repeat;
     background-size:100% ;
     /* font-family: 'Kaushan Script', cursive; */
@@ -15,6 +16,10 @@ body{
   
     box-sizing:border-box;
 }
+/* .aligncenter{
+   text-align: center;
+
+} */
 .secta{
     display: flex;
 }
