--- a/learn_more.css
+++ b/learn_more.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Montserrat', sans-serif;
     /* font-family: 'Kaushan Script', cursive; */
-    background-color: black;
+    
      font-size: 15px;
      color: #333;
      line-height: 1.6;
@@ -49,6 +49,7 @@ h1,h2,h3,h4,h5,h6{
       justify-content: center;
       width: 100%;
       height: 100vh;
+      background-color: red;
       background-image: url(front/ss.jpg) center no-repeat;
       animation: eye 20s infinite;
       animation-iteration-count: infinite linear;
@@ -75,6 +76,7 @@ h1,h2,h3,h4,h5,h6{
       text-align: center;
       text-transform: uppercase;
       line-height: 1;
+      text-decoration: none;
        
    }
    .intro_sutitle{
@@ -188,4 +190,40 @@ h1,h2,h3,h4,h5,h6{
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
+  }
+  .cmd{
+    padding-top: 10vw;
+    padding-bottom: 20vw;
+    background-color: rgb(34,30,34);
+  }
+  .nike{
+    font-size: 1.7vw;
+    color: white;
+    text-align: center;
+  }
+  .adidas{
+    color: grey;
+    text-align: center;
+    font-size: 1.2vw;
+  }
+  .suret{
+    width: 35vw;
+    padding-top: 5vw;
+    padding-left: 15vw;
+  }
+  .touch{
+    font-size: 3vw;
+    padding-left: 12vw;
+    padding-top:3vw;
+    color: rgb(226,159,1);
+  }
+  .puma{
+    display: flex;
+  }
+  .idea{
+    padding-left: 38vw;
+    text-align: center;
+    margin-top: -12vw;
+    font-size: 1.5vw;
+    color: white;
   }
