--- a/AboutUs.css
+++ b/AboutUs.css
@@ -1,4 +1,5 @@
 body{
+   background-color: rgb(34, 30, 34);
     font-family: 'Montserrat', sans-serif;
     font-family: 'Kaushan Script', cursive;
      font-size: 15px;
@@ -6,6 +7,7 @@ body{
      line-height: 1.6;
      margin: 0;
      overflow-x: hidden
+     
  }
  *,
  *:before,
@@ -131,4 +133,348 @@ body{
  .nav_link:hover:after{
  opacity: 1;
  }
- 
+ .team_members {
+	text-align: center;
+	margin-top: 150px;
+	padding-bottom: 150px;
+   margin-left: 30px;
+}
+
+#team_members_text {
+	text-transform: uppercase;
+	color:azure;
+	font-size: 15px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.team_members hr {
+	margin-right: 49%;
+	margin-left: 49%;
+	color: white;
+}
+
+#team_members_h1 {
+	color: gold;
+	font-family: 'Abril Fatface', display;
+   font-size: 50px;
+}
+
+.team_members_people {
+	display: flex;
+	margin-left: 60px;
+	margin-top: 70px;
+}
+
+#people_1_image {
+	margin-right: 20px;
+	margin-bottom: 20px;
+}
+
+#people_1_name {
+	font-size: 25px;
+	color: whitesmoke;
+	font-family: 'Abril Fatface', display;
+}
+
+#people_1_profession{
+	color: #A1A1A1;
+	margin-top: -15px;
+	font-size: 15px;
+	font-family: 'Roboto', sans-serif;
+}
+
+.people_2 {
+	margin-right: 20px;
+}
+
+#people_2_image {
+	margin-bottom: 20px;
+}
+
+#people_2_name {
+	font-size: 25px;
+	color: whitesmoke;
+	font-family: 'Abril Fatface', display;
+}
+
+#people_2_profession{
+	color: #A1A1A1;
+	margin-top: -15px;
+	font-size: 15px;
+	font-family: 'Roboto', sans-serif;
+}
+
+#people_3_image {
+	margin-bottom: 20px;
+}
+
+#people_3_name {
+	font-size: 25px;
+	color: whitesmoke;
+	font-family: 'Abril Fatface', display;
+}
+
+#people_3_profession{
+	color: #A1A1A1;
+	margin-top: -15px;
+	font-size: 15px;
+	font-family: 'Roboto', sans-serif;
+}
+
+.people_3 {
+	margin-right: 20px;
+}
+
+#people_4_image {
+	margin-right: 20px;
+	margin-bottom: 20px;
+}
+
+#people_4_name {
+	font-size: 25px;
+	color: whitesmoke;
+	font-family: 'Abril Fatface', display;
+}
+
+#people_4_profession{
+	color: #A1A1A1;
+	margin-top: -15px;
+	font-size: 15px;
+	font-family: 'Roboto', sans-serif;
+}
+.footer {
+	height: 330px;
+	/* background-color: #25292C; */
+	display: flex;
+	color: white;
+	padding-top: 80px;
+	/* background-color: #1A1A1A; */
+	background-color: #221E22;
+	border-top: 1px dashed gold;
+}
+
+.logo_footer {
+	margin-left: 100px;
+	margin-right: 170px;
+	display: flex;
+	margin-top: 37px;
+}
+
+.logo_image_footer {
+	margin-right: 0px;
+	cursor: pointer;
+   margin-top: -30px;
+}
+
+.logo_text_footer {
+	padding-top: 3px;
+	cursor: pointer;
+}
+
+.logo_footer h1 {
+	font-size: 20px;
+	font-family: 'Abril Fatface', display;
+	cursor: pointer;
+	/* color: wheat; */
+	color: #F0F0F0;
+}
+
+.logo_footer p {
+	font-size: 10px;
+	margin-top: -6px;
+	font-family: 'Montserrat', sans-serif;
+	letter-spacing: 2px;
+	color: #A1A1A1;
+	cursor: pointer;
+}
+
+.column_1_footer {
+	margin-right: 200px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 17px;
+	cursor: pointer;
+	/* color: wheat; */
+	color: #F0F0F0;
+	transition: 0.5s all;
+   margin-left: 50px;
+}
+
+.column_1_footer div:hover {
+	font-family: 'Roboto', sans-serif;
+	font-size: 17px;
+	cursor: pointer;
+	/* color: #FC653E; */
+	color: #e29f01;
+}
+
+.column_2_footer {
+	margin-right: 200px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 17px;
+	cursor: pointer;
+	/* color: wheat; */
+	color: #F0F0F0;
+   margin-left: 7.320644216691069vw;
+}
+
+.column_2_footer div:hover {
+	font-family: 'Roboto', sans-serif;
+	font-size: 17px;
+	cursor: pointer;
+	/* color: #FC653E; */
+	color: #e29f01;
+}
+
+#darme_footer:hover {
+	/* color: wheat; */
+	color: #F0F0F0;
+}
+
+.column_3_footer {
+	font-family: 'Roboto', sans-serif;
+	font-size: 15px;
+	color: whitesmoke;
+   margin-left: 1.856515373352855vw;
+}
+
+.column_3_div12{
+	color: #00AEEF;
+	font-size: 17px;
+	text-transform: uppercase;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.copyright_footer {
+	color: #ADADAD;
+	position: absolute;
+	text-decoration: none;
+	margin-top: 225px;
+	font-size: 15px;
+	font-family: 'Roboto', sans-serif;
+	text-align: center;
+	margin-left: 560px;
+}
+
+
+@media (max-width: 700px) {
+   .team_members_people {
+		display: flex;
+		flex-direction: column;
+	}
+
+	#team_members_h1 {
+		margin-bottom: 70px;
+	}
+
+	.people_1 {
+		margin-bottom: 80px;
+	}
+
+	#people_1_image {
+		transform: scale(1.3);
+		margin-left: -40px;
+	}
+
+	#people_1_name {
+		margin-top: 40px;
+		margin-left: -40px;
+	}
+
+	#people_1_profession {
+		margin-left: -40px;
+	}
+
+	.people_2 {
+		margin-bottom: 80px;
+	}
+
+	#people_2_image {
+		transform: scale(1.3);
+		margin-left: -40px;
+	}
+
+	#people_2_name {
+		margin-top: 40px;
+		margin-left: -40px;
+	}
+
+	#people_2_profession {
+		margin-left: -40px;
+	}
+
+	.people_3 {
+		margin-bottom: 80px;
+	}
+
+	#people_3_image {
+		transform: scale(1.3);
+		margin-left: -40px;
+	}
+
+	#people_3_name {
+		margin-top: 40px;
+		margin-left: -40px;
+	}
+
+	#people_3_profession {
+		margin-left: -40px;
+	}
+
+	#people_4_image {
+		transform: scale(1.3);
+		margin-left: -40px;
+	}
+
+	#people_4_name {
+		margin-top: 40px;
+		margin-left: -40px;
+	}
+
+	#people_4_profession {
+		margin-left: -40px;
+	}
+
+	/*FOOTER*/
+	.footer {
+		height: 400px;
+	}
+
+	.logo_footer {
+		margin-top: -20px;
+		margin-left: 190px;
+	}
+
+	.column_1_footer {
+		margin-left: -420px;
+		margin-right: 45px;
+		margin-top: 80px;
+	}
+
+	.column_2_footer {
+		margin-top: 80px;
+	}
+
+	.column_3_footer {
+		margin-top: 80px;
+		margin-left: -155px;
+	}
+
+	.copyright_footer {
+		margin-left: 150px;
+		margin-top: 295px;
+	}
+
+	/*REGISTRATON*/
+	.popup-content {
+		width: 400px;
+		margin-top: -60px;
+	}
+
+	#username {
+		margin-left: 90px;
+	}
+
+	#password {
+		margin-left: 90px;
+	}
+}
