--- a/learn_more.css
+++ b/learn_more.css
@@ -248,18 +248,151 @@ h1,h2,h3,h4,h5,h6{
     margin-left: 20vw;
     width: 20vw;
   }
-  .photo{
-    width:20vw;
-    
-    margin-left: 12vw;
-  }
-  .best{
-    color: rgb(226,159,1);
-    font-size: 5vw;
-    margin-left: 20vw;
-    margin-top: -5vw;
-  }
-  
-  .were{
-    font-size: 7vw;
-  }
+ .class{
+  padding-left: 45vw;
+  color: white;
+  text-align: center;
+  margin-top: -6vw;
+  font-size: 1.5vw;
+}
+.test{
+  padding-top: 10vw;
+  color: white;
+  font-size: 1.2vw;
+  text-align: center;
+}
+.bord{
+  border: 0.01vw solid grey;
+  margin-left: 47vw;
+  margin-right: 47vw;
+}
+.say{
+  color: rgb(255,215,0);
+  font-size: 3vw;
+  text-align: center;
+}
+.very{
+  text-align: center;
+  font-size: 1.2vw;
+  color: white;
+}
+.nur{
+  text-align: center;
+  color: rgb(233, 177, 45);
+}
+.cost{
+  text-align: center;
+  color: grey;
+}
+.footer {
+  height: 330px;
+  /* background-color: #25292C; */
+  display: flex;
+  color: white;
+  padding-top: 80px;
+  /* background-color: #1A1A1A; */
+  background-color: #221E22;
+  border-top: 1px dashed gold;
+}
+
+.logo_footer {
+  margin-left: 100px;
+  margin-right: 170px;
+  display: flex;
+  margin-top: 37px;
+}
+
+.logo_image_footer {
+  margin-right: 0px;
+  cursor: pointer;
+   margin-top: -30px;
+}
+
+.logo_text_footer {
+  padding-top: 3px;
+  cursor: pointer;
+}
+
+.logo_footer h1 {
+  font-size: 20px;
+  font-family: 'Abril Fatface', display;
+  cursor: pointer;
+  /* color: wheat; */
+  color: #F0F0F0;
+}
+
+.logo_footer p {
+  font-size: 10px;
+  margin-top: -6px;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 2px;
+  color: #A1A1A1;
+  cursor: pointer;
+}
+
+.column_1_footer {
+  margin-right: 200px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  cursor: pointer;
+  /* color: wheat; */
+  color: #F0F0F0;
+  transition: 0.5s all;
+   margin-left: 50px;
+}
+
+.column_1_footer div:hover {
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  cursor: pointer;
+  /* color: #FC653E; */
+  color: #e29f01;
+}
+
+.column_2_footer {
+  margin-right: 200px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  cursor: pointer;
+  /* color: wheat; */
+  color: #F0F0F0;
+   margin-left: 7.320644216691069vw;
+}
+
+.column_2_footer div:hover {
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  cursor: pointer;
+  /* color: #FC653E; */
+  color: #e29f01;
+}
+
+#darme_footer:hover {
+  /* color: wheat; */
+  color: #F0F0F0;
+}
+
+.column_3_footer {
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  color: whitesmoke;
+   margin-left: 1.856515373352855vw;
+}
+
+.column_3_div12{
+  color: #00AEEF;
+  font-size: 17px;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.copyright_footer {
+  color: #ADADAD;
+  position: absolute;
+  text-decoration: none;
+  margin-top: 225px;
+  font-size: 15px;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  margin-left: 560px;
+}
