--- a/belkafood.css
+++ b/belkafood.css
@@ -16,10 +16,10 @@ body{
   
     box-sizing:border-box;
 }
-/* .aligncenter{
-   text-align: center;
+.intro{
+   align-items: center;
 
-} */
+}
 .secta{
     display: flex;
 }
