--- a/belkafood.css
+++ b/belkafood.css
@@ -1,4 +1,5 @@
 body{
+    display: block;
     font-family: 'Montserrat', sans-serif;
     background-image: url(img/belka.JPG);
     overflow-x: hidden;
